test/libsolidity/syntaxTests/dataLocations/externalFunction/function_argument_location_specifier_test_external_storage.sol
contract test {
    function f(bytes storage) external;
}
// ----
// TypeError 6651: (31-44): Data location must be "memory" or "calldata" for parameter in external function, but "storage" was given.
